--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,7 @@ body {
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
+  height: 250px;
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
@@ -83,6 +84,22 @@ body {
   cursor: pointer;
 }
 
+.submit-button {
+  position: absolute;
+  width: 60px;
+  text-align: center;
+  bottom: 25px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: rgb(247, 195, 84);
+}
+.submit-button:hover {
+  background-color: rgb(54, 61, 54);
+  color: white;
+  cursor: pointer;
+}
+
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
@@ -91,4 +108,18 @@ body {
 .movie-warning {
   color: red;
   text-align: center;
+}
+
+.movie-form {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+}
+
+.hidden {
+  display: none;
+}
+
+.active {
+  display: block;
 }
