--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
-  height: 250px;
+  height: 350px;
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
@@ -116,10 +116,20 @@ body {
   flex-direction: column;
 }
 
+.director-input {
+  font-size: 0.8rem;
+
+}
+
 .hidden {
   display: none;
 }
 
 .active {
   display: block;
+}
+
+input {
+  margin-top: 20px;
+  height: 1.5rem;
 }
