--- a/client/src/index.css
+++ b/client/src/index.css
@@ -85,11 +85,9 @@ body {
 }
 
 .submit-button {
-  position: absolute;
   width: 60px;
+  margin-top: 10px;
   text-align: center;
-  bottom: 25px;
-  right: 25px;
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: rgb(247, 195, 84);
