--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,3 +131,19 @@ input {
   margin-top: 20px;
   height: 1.5rem;
 }
+
+.delete-button {
+  position: absolute;
+  width: 80px;
+  text-align: center;
+  bottom: 25px;
+  left: 25px;
+  border: none;
+  padding: 8px 10px;
+  background-color: rgb(248, 91, 91);
+}
+.delete-button:hover {
+  background-color: rgb(128, 37, 37);
+  color: white;
+  cursor: pointer;
+}
