--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,3 +147,65 @@ input {
   color: white;
   cursor: pointer;
 }
+
+.add-movie {
+  display: block;
+  width: 20%;
+  margin: auto;
+  text-align: center;
+  border: none;
+  padding: 15px 15px;
+  color: black;
+  background-color: lightskyblue;
+  text-decoration: none;
+}
+.add-movie:hover {
+  background-color: rgb(66, 123, 158);
+  color: white;
+  cursor: pointer;
+}
+
+.add-movie-form {
+  font-size: 1.5rem;
+  display: block;
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  border: none;
+  padding: 55px;
+  color: black;
+  background-color: lightskyblue;
+  text-decoration: none;
+}
+
+.title-form, .director-form, .metascore-form {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.stars-form {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-movie-input {
+  margin-top: 0;
+  margin: 10px;
+}
+
+.add-movie-btn {
+  width: 30%;
+  font-size: 1.3rem;
+  border: none;
+  background-color: rgba(34, 63, 63, 0.678);
+  color: white;
+  cursor: pointer;
+}
+
+.add-movie-btn:hover {
+  background-color: rgba(112, 189, 189, 0.678);
+  color: rgb(37, 37, 37);
+}
